--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-<title>Komplett katalog</title>
-<meta content='https://i.imgur.com/EEc1ovI.png' property='og:image'/>
+<meta name="robots" content="noindex, nofollow">
+<title>Catalog Complete</title>
+<meta content='https://i.postimg.cc/Kv6MdNqc/Screenshot-743.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Come discret0</title>
+<title>Photo Gallery</title>
 <div class="layer">
 </div>
 <div class="wrap">
@@ -22,32 +23,32 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-We go out to homes at night for hours, all over the city. Do you want to see my catalogue??</div>
+We go out to homes at night for hours, everywhere in the city. Do you want to see my catalog?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-YES
+Yes
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-NO
+No
 </div>
 </div>
 </div>
 <div class="step-item" style="display: none;">
 <div class="question-title ">
-Are you at least 18 years old? We are a club of Companion Ladies, press YES and see us live Naked..
+Are you at least 18 years old? We are a club of Companion Ladies, Press YES and watch us live Naked..
 </div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-YES
+Yes
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-NO
+No
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-For free registration and FUCK with any girl, press the ENTER button below and register for free on our private site by appointment. We are live and looking forward to delicious anal, vaginal, threesomes and more..... </div>
+For Free Registration and FUCK with any Girl, press the ENTER button below, and make your free registration on our private site by appointment. We are live, looking forward to delicious anal, vaginal, threesomes and more... </div>
 <p>
 <b style="color: red;">
 </b>
@@ -58,7 +59,7 @@ For free registration and FUCK with any girl, press the ENTER button below and r
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn.jmp-assets.com/assets/1406/video/video04.mp4">
+<source src="https://cdn.jmp-assets.com/assets/3305/video/1.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
@@ -66,3 +67,4 @@ For free registration and FUCK with any girl, press the ENTER button below and r
                         (window));
       /*]]>*/ 
 </body>
+</html>
